# Mobile-Tartu-2024

./: .gitignore  .readthedocs.yml  README.md  setup.cfg
binder/: environment.yml
ci/: environment.yml  r-packages.txt
source/: conf.py  index.rst  requirements.txt
source/_static/: custom.css
source/img/: Thumbs.db
source/info/: License-terms.rst  installing-miniconda.rst
source/notebooks/: Helsinki_Hexagons_with_Centroids_5Rings_9Res.csv  Helsinki_Hexagons_with_Centroids_6Rings_9Res.csv  Helsinki_Hexagons_with_Centroids_7Rings_9Res.csv  Helsinki_OD_Hexagons_with_LatLon_5Rings_9Res.csv  Intro-to-data.ipynb  Loco_vHex_PTavgGHG.csv  T0_Intro_to_data.ipynb  T1_spatial_network_analysis_SingleOD.ipynb  T1_spatial_network_analysis_SingleOD_May3-24_Copy1.ipynb  T2_calculating-travel-time-matrices_and_GHG_factors.ipynb  TotalCo2_OD_Matrix_locomizer_May2024.csv  calculating-travel-time-matrices.ipynb  r5py_demo.ipynb  r5r_demo.ipynb  spatial_network_analysis.ipynb  temp_travel_details.csv  test_r5py.ipynb  travel-time-matrices.ipynb
source/notebooks/.ipynb_checkpoints/: Intro_to_data-checkpoint.ipynb  T0_Intro_to_data-checkpoint.ipynb  T0_Intro_to_data_backupCopy1-checkpoint.ipynb  T1_RoughtWork_spatial_network_analysis-checkpoint.ipynb  T1_spatial_network_analysis_SingleOD-checkpoint.ipynb  T2_calculating-travel-time-matrices_and_GHG_factors-checkpoint.ipynb  (+4 more)
source/presentations/: Workshop_Assignment.ipynb  Workshop_Assignment.rst  intro_to_tutorial_and_accessibility.rst  r5py_and_r5r_tools.rst  r5r_advanced_features.rst  short_talks.rst  welcome_to_workshop.rst
(+36 files in other folders)
