[metadata]
name = Workshop on
version = 2024
license = MIT
description = Workshop on Open Tools for Equitable and Sustainable Accessibility and Mobility Analysis
author = Henrikki Tenkanen
author_email = henrikki.tenkanen@aalto.fi
url = http://otesama2023.readthedocs.io/
classifiers =
	Development Status :: 2 -
	Environment :: Web Environment
	License :: OSI Approved :: MIT License
	Operating System :: OS Independent
	Programming Language :: Python
	Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Programming Language :: Python :: 3.10

[options]
packages = find:
include_package_data = True
zip_safe = False

[tool:release]
github_owner = r5py
github_repo = GIScience_2023